# lutris-gamepad-ui

./: .gitignore  README.md  README_GAMEPAD_TESTING.md  README_SCREENSHOTS.md  controller-uinput.rules  controller_helper.py  electron-builder.config.cjs  electron_preload.cjs  lutris_wrapper.py  lutris_wrapper.sh  package-lock.json  package.json
scripts/: gamepad_compat_matrix.json  inputtino_compat_lab.py
src_backend/: config_manager.cjs  controller_manager.cjs  controller_manager.test.cjs  evdev_gamepad_poller.cjs  game_manager.cjs  ipc_handlers.cjs  utils.cjs  window_manager.cjs
src_frontend/: App.jsx
src_frontend/components/: ControllerSettings.jsx  ControllerTester.jsx  SettingsMenu.jsx  SystemMenu.jsx  TopBar.jsx
src_frontend/contexts/: InputContext.jsx
src_frontend/locale/: locale.en.json  locale.fa.json  locale.it.json  locale.sv.json
src_frontend/resources/: gamepad_mapping_db.json
src_frontend/styles/: ControllerSettings.css  ControllerTester.css
src_frontend/utils/: ipc.js
tools/inputtino-harness/: CMakeLists.txt  main.cpp
